# rotors_simulator

./: .gitignore  README.md
rotors_comm/: CMakeLists.txt
rotors_comm/msg/: FormationCenter.msg  FormationCenterStamped.msg  Neighbor.msg  NeighborStamped.msg  PicsData.msg  PicsProcessResult.msg
rotors_comm/srv/: AdjacencyReset.srv  CommandTask.srv  FormationTask.srv  PathTarget.srv
rotors_control/include/rotors_control/: roll_pitch_yawrate_thrust_controller.h
rotors_control/src/nodes/: lee_position_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.h
rotors_description/rviz/: firefly_model_view.rviz  firefly_swarm_view.rviz  techpod_one_view.rviz
rotors_description/urdf/: component_snippets.xacro  firefly.xacro  firefly_generic_pose_sensor.gazebo  fixed_wing_base.xacro  multirotor_base.xacro  techpod.xacro  techpod_base.xacro
rotors_gazebo/launch/: firefly_swarm_hovering_example.launch  fixed_wing_with_joy.launch  mav_hovering_example.launch  mav_with_joy.launch  spawn_fixed_wing.launch
rotors_gazebo/src/: hovering_example.cpp  waypoint_publisher.cpp
rotors_gazebo/worlds/: yosemite.world
rotors_gazebo_plugins/: CMakeLists.txt
rotors_gazebo_plugins/src/: gazebo_controller_interface.cpp  gazebo_fw_dynamics_plugin.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp
rotors_joy_interface/: CMakeLists.txt
rotors_joy_interface/include/rotors_joy_interface/: joy.h
rotors_joy_interface/launch/: joy_test.launch
rotors_joy_interface/src/: joy.cpp  joy_zdown.cpp  joy_zup.cpp
(+5 files in other folders)
